# phony

./: .gitignore  Dockerfile  Justfile  Makefile  input-example.txt  learn.py  phony.py  test.py
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: rust.yml
jupyter/: docker-compose.yml  phony.ipynb
learn/: Dockerfile  learn.py  phony.py  phony_inference.py  phony_test.py
serve/: Cargo.toml  README.md
serve/src/: augment.rs  digits.rs  main.rs  numerate.rs  odds.rs  phone-augment.rs  phony.rs  phony_tf.rs  sample.rs  tf_problem.rs
