[package]
name = "serve"
version = "0.1.0"
authors = ["Denis Bazhenov <dotsid@gmail.com>"]
edition = "2018"

[[bin]]
name = "serve"
path = "src/main.rs"

[[bin]]
name = "augment"
path = "src/augment.rs"

[dependencies]
tensorflow = "~0.13"
encoding = "^0.2"
clap = "~2.33"
rand = "~0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "~0.8"
ndarray = "~0.12"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
